Adding few important things

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -93,6 +93,9 @@ i18n.default_language = en
 module.static=github.com/revel/revel/modules/static
 
 
+# We are overwriting {{ }} template delimiter in favor of Angular.JS
+template.delimiters = "[[ ]]"
+
 
 ################################################################################
 # Section: dev
