--- a/conf/app.conf
+++ b/conf/app.conf
@@ -145,17 +145,11 @@ log.error.output = stderr
 [prod]
 mode.dev = false
 
-
 results.pretty = false
-
-
 watch = false
-
-
 module.testrunner =
 
-
 log.trace.output = off
-log.info.output  = %(app.name)s.log
-log.warn.output  = %(app.name)s.log
-log.error.output = %(app.name)s.log
+log.info.output  = /var/log/jsonstruct/%(app.name)s.log
+log.warn.output  = /var/log/jsonstruct/%(app.name)s.log
+log.error.output = /var/log/jsonstruct/%(app.name)s.log
