--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,9 @@ go:
   - 1.4
   - tip
 
+install:
+  - go get -v github.com/yext/revel/revel
+  - go get -v github.com/0x19/gotostruct
+
 script:
   - revel test github.com/0x19/jsonstruct.com
