--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
   - tip
 
 install:
-  - go get -v github.com/yext/revel/revel
+  - go get -v github.com/revel/revel
   - go get -v github.com/0x19/gotostruct
 
 script:
