--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ go:
   - tip
 
 install:
+  - export PATH=$PATH:$HOME/gopath/bin
   - go get -v github.com/revel/revel
   - go get -v github.com/0x19/gotostruct
 
